# larkrs-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
larkrs-client/: Cargo.toml  LICENSE  README.md
larkrs-client/src/: lib.rs
larkrs-client/src/bitable/: mod.rs  table.rs
larkrs-client/src/bot/: chat.rs
larkrs-client/src/wiki/: client.rs  mod.rs
src/: main.rs
src/client/: auth.rs  mod.rs
src/client/bitable/: mod.rs  table.rs
src/client/bot/: chat.rs  mod.rs
