[package]
name = "larkrs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
dotenvy = "0.15"
poem-mcpserver = {version = "0.1.8", features = ["poem"]}
schemars = "0.8.22"
