[package]
name = "larkrs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
poem-mcpserver = {version = "0.1.8", features = ["poem"]}
schemars = "0.8.22"
larkrs-client = { path = "./larkrs-client" }
log = "0.4"
env_logger = "0.11"
