[package]
name = "larkrs-client"
version = "0.1.2"
edition = "2024"
description = "Lark (Feishu) API client library for Rust"
license = "MIT"
authors = ["hanxuanliang <hxuanliang@gmail.com>"]
repository = "https://github.com/hanxuanliang/larkrs-mcp-server"
documentation = "https://docs.rs/larkrs-client"
homepage = "https://github.com/hanxuanliang/larkrs-mcp-server"
keywords = ["lark", "feishu", "mcp-server"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
dotenvy = "0.15"
